--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 
 section {
     display: flex;
+    margin: 150px;
 }
 
 .half-width {
@@ -38,4 +39,10 @@ section {
 
 .top-banner {
     background-image: url(images/top-banner.png);
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: rightgi;
 }
